tests/check/illegal_chunkat2.co
// RUN: not choreo %s 2>&1 | FileCheck %s

__co__ auto illegal_chunkat(f32 [16, 32, 64] a) {
  parallel p by 2 {
    with idx in [32, 2] {
      dma.copy a.chunkat(idx, p) => shared;
      dma.copy a.subspan(8, 33, 1).at(idx, p) => shared;
      dma.copy a.subspan(8, 16, 32).at(idx, p).modspan(7, 17, 33).at(idx, p) => shared;
    }
  }
}

// CHECK: error: tiling factor exceeds data size (32 > 16) in dimension 0.
// CHECK: error: subspan too large for dimension 1 (33 > 32).
// CHECK: error: subspan too large for dimension 1 (17 > 16).
// CHECK: error: subspan too large for dimension 2 (33 > 32).
// CHECK: Totally 4 errors have been detected.
